[gd_scene load_steps=2 format=3 uid="uid://cmxvk8yx3nwts"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="Crosshair" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CrosshairLines" type="Control" parent="Crosshair"]
layout_mode = 2

[node name="Top" type="ColorRect" parent="Crosshair/CrosshairLines"]
layout_mode = 0
offset_left = -1.0
offset_top = -10.0
offset_right = 1.0
color = Color(1, 1, 1, 0.8)

[node name="Bottom" type="ColorRect" parent="Crosshair/CrosshairLines"]
layout_mode = 0
offset_left = -1.0
offset_top = 4.0
offset_right = 1.0
offset_bottom = 14.0
color = Color(1, 1, 1, 0.8)

[node name="Left" type="ColorRect" parent="Crosshair/CrosshairLines"]
layout_mode = 0
offset_left = -10.0
offset_top = -1.0
offset_bottom = 1.0
color = Color(1, 1, 1, 0.8)

[node name="Right" type="ColorRect" parent="Crosshair/CrosshairLines"]
layout_mode = 0
offset_left = 4.0
offset_top = -1.0
offset_right = 14.0
offset_bottom = 1.0
color = Color(1, 1, 1, 0.8)

[node name="Dot" type="ColorRect" parent="Crosshair/CrosshairLines"]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
color = Color(1, 1, 1, 0.6)

[node name="ADSIndicator" type="CenterContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ADSIndicator"]
layout_mode = 2
text = "ADS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmmoCounter" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="AmmoCounter"]
layout_mode = 2

[node name="Label" type="Label" parent="AmmoCounter/VBoxContainer"]
layout_mode = 2
text = "AMMO"
horizontal_alignment = 1

[node name="AmmoLabel" type="Label" parent="AmmoCounter"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_font_sizes/font_size = 36
text = "30 / 30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeaponInfo" type="PanelContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = -20.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="WeaponInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="WeaponInfo/VBoxContainer"]
layout_mode = 2
text = "WEAPON"
horizontal_alignment = 1

[node name="WeaponLabel" type="Label" parent="WeaponInfo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "Assault Rifle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StanceInfo" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="StanceInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="StanceInfo/VBoxContainer"]
layout_mode = 2
text = "STANCE"
horizontal_alignment = 1

[node name="StanceLabel" type="Label" parent="StanceInfo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "Standing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FreelookIndicator" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "FREELOOK [45Â°]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractionPrompt" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "[E] Pick up Rifle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -140.0
offset_right = 250.0
offset_bottom = -110.0
grow_vertical = 0
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "HEALTH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControlHints" type="VBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0

[node name="Title" type="Label" parent="ControlHints"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "CONTROLS"
horizontal_alignment = 1

[node name="Controls" type="Label" parent="ControlHints"]
layout_mode = 2
text = "WASD - Move  |  Mouse - Look  |  ALT - Freelook  |  RMB - ADS  |  LMB - Fire
E - Interact  |  R - Reload  |  C - Stance  |  Shift - Sprint  |  4/5 - HUD Toggle"
horizontal_alignment = 1

[node name="DamageOverlay" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0.3)
